# gingy

./: Cargo.toml  README.md
src/: cli.rs  compile.rs  config.rs  dependency.rs  error.rs  irgen.rs  lexer.rs  link.rs  lsp.rs  main.rs  span.rs  token.rs
src/ast/: mod.rs
src/backend/: c.rs  llvm.rs  mod.rs
src/parser/: mod.rs  reader.rs
src/resolve/: const_val.rs  mod.rs  std_builtins.rs  trait_impls.rs  types.rs
src/types/: mod.rs
