[package]
name = "gingy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
lsp-types = { version = "0.94.1" }
lsp-server = { version = "0.7.4" }
llvm-sys = { version = "=160.0.2" }
serde = { version = "1.0.148" }
serde_derive = { version = "1.0.148" }
serde_json = { version = "1.0.89" }
crossbeam = { version = "0.8.2" }
